# learning-app

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  rebuild_ui.sh  requirements.dev.txt
.github/workflows/: learningapp.yml
locale/pl_PL/LC_MESSAGES/: django.mo  django.po
requirements/: requirements.dev.txt  requirements.txt
simplystudy/: manage.py  settings.py  urls.py  views.py
simplystudy-ui/: README.md  angular.json  package-lock.json  package.json
simplystudy-ui/src/: index.html
simplystudy-ui/src/app/: app-routing.module.ts  app.component.spec.ts  app.component.ts  app.module.ts  auth-token.interceptor.ts  auth.guard.ts  auth.service.ts  auth.ts  csrf-token.interceptor.spec.ts  csrf-token.interceptor.ts  csv.service.ts  error-handling.service.ts  language.interceptor.ts  language.service.ts  snackbar.service.ts
simplystudy/questions/: admin.py  apps.py  export_test.py  models.py  permissions.py  serializers.py  tests.py  views.py
simplystudy/questions/migrations/: 0001_initial.py  0002_course_test_remove_question_owner_and_more.py  0002_questionset_is_private.py  0003_alter_course_description.py  0003_userresource.py  0004_testquestion_question_and_more.py  0005_testquestion_is_true.py
simplystudy/questions/tests/: fixtures.py  test_endpoints.py  test_get_data.py  test_modify_data.py
simplystudy/simplystudy/: asgi.py  settings.py  wsgi.py
simplystudy/users/: admin.py  apps.py  models.py  serializers.py  views.py
simplystudy/users/migrations/: 0001_initial.py
templates/: test-export-template.html
(+114 files in other folders)
