[build-system]
requires = ["setuptools>=52", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Simply Study"
version = "0.0.1"
dependencies = []

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages]
find = {namespaces = true, exclude = ["tests", "tests.*"]}

[tool.black]
line-length = 99

[tool.isort]
profile = "black"
line_length = 99

[tool.mypy]
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]

[tool.django-stubs]
django_settings_module = "simplystudy.settings"

[tool.pylint]
load-plugins = ["pylint_django"]

disable = ["missing-module-docstring"]